kubernetes/apps/linkding/apps/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: linkding-gateway
  namespace: linkding
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTPS
      port: 443
      name: linkding-tls-gw
      hostname: "linkding.home.svc"
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        certificateRefs:
          - kind: Secret
            name: linkding-gateway
