kubernetes/apps/linkding/apps/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: linkding
  namespace: linkding
spec:
  parentRefs:
    - kind: Gateway
      name: linkding-gateway
      namespace: linkding
  hostnames:
    - linkding.home.svc
  rules:
    - backendRefs:
        - name: linkding
          port: 9090
